# ds_libraby

./: LICENSE  README.md  setup.cfg
docs/: conf.py  index.rst  stats_metrics.Operations.rst  stats_metrics.rst
docs/srt/: modules.rst  stats_metrics.rst
src/ds_library/stats_metrics/: __init__.py  binary_metrics.py
