[metadata]
name = DS_LIBRARY
version = 0.0.1
license = 'MIT'
description = library with multiple data science tools
long_description = file: README.md
author = Luan Santos de Oliveira, José Vitor Frizarin do Santos, Fernanda Amaral Melo, Diego Renato Risco Cosavalente
author_email = luan.oliveira@viavarejo.com.br, jose.frizarin@viavarejo.com, fernanda.melo@viavarejo.com.br, diego.cosavalente@viavarejo.com.br
url = https://github.com/LUANSFC95/ds_library.git

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires = 
    numpy
    pandas
    scikitlearn
    python-whois


[options.packages.find]
where=src